the images have been moved to a separate folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="site">
         <header>
           <div class="name">
-            <img class="head avatarHeader" src="icon1.jpeg">
+            <img class="head avatarHeader" src="images/icon1.jpeg">
             <p class="head">Vendance</p>
           </div>
           <div class="links">
@@ -23,29 +23,29 @@
         <div class="" id="mainInfo">
           <main>
             <div class="about">
-              <img class="icon avatarMain" src="icon2.jpeg">
+              <img class="icon avatarMain" src="images/icon2.jpeg">
               <p class="text"> Информация об авторе</p>
             </div>
             <div class="music">
               <p>Популярные треки</p>
               <div class="albums">
                 <div class="track track1">
-                  <img class="img track1" src="track1.jpg">
+                  <img class="img track1" src="images/track1.jpg">
                   <button type="button">+</button>
                 </div>
                 <div class="track track2">
-                  <img class="img track2" src="track2.jpg">
+                  <img class="img track2" src="images/track2.jpg">
                   <button type="button">+</button>
                 </div>
                 <div class="track track3">
-                  <img class="img track3" src="track1.jpg">
+                  <img class="img track3" src="images/track1.jpg">
                   <button type="button">+</button>
                 </div>
               </div>
               <div class="equalizer">equalizer</div>
             </div>
             <div class="telegram">
-              <img class="icon tg" src="tg.jpeg">
+              <img class="icon tg" src="images/tg.jpeg">
               <p class="text">Телеграм канал</p>
             </div>
           </main>
@@ -65,11 +65,11 @@
           <p>Ссылки</p>
           <div class="linkContainer">
             <div class="tg">
-              <img class="imgLink" src="qr1.png">
+              <img class="imgLink" src="images/qr1.png">
               <p>Telegram</p>
             </div>
             <div class="SC">
-              <img class="imgLink" src="qr1.png">
+              <img class="imgLink" src="images/qr1.png">
               <p>SoundCloud</p>
             </div>
           </div>
