navigation has been changed

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <p class="head">Vendance</p>
           </div>
           <div class="links">
-            <input type="button" class="link mainLink" value="Главное">
-            <input type="button" class="link worksLink" value="Работы">
-            <input type="button" class="link inspirationLink" value="Вдохновление">
-            <input type="button" class="link linksLink" value="Ссылки">
+            <a href="#mainInfo" class="link mainLink">Главное</a>
+            <a href="#works" class="link worksLink">Работы</a>
+            <a href="#inspiration" class="link inspirationLink">Вдохновление</a>
+            <a href="#linksPage" class="link linksLink">Ссылки</a>
           </div>
         </header>
 
-        <div class="" id="mainInfo">
+        <div id="mainInfo">
           <main>
             <div class="about">
               <img class="icon avatarMain" src="images/icon2.jpeg">
@@ -46,13 +46,13 @@
               <div class="equalizer">equalizer</div>
             </div>
             <div class="telegram">
-              <img class="icon tgMain" src="images/tg.jpeg">
+              <img class="icon" src="images/tg.jpeg">
               <p class="text">Телеграм канал</p>
             </div>
           </main>
         </div>
 
-        <div class="inactive" id="works">
+        <div id="works">
           <div class="worksContainer">
             <div class="work w1">
               <input type="button" class="actionBtn" id="3">
@@ -89,26 +89,25 @@
           </div>
         </div>
 
-        <div class="inactive " id="inspiration">
-          <div class="inspirationContainer">
-            <p>fasfsadf</p>
-            <p>asdfsadasd</p>
-          </div>
+        <div id="inspiration">
+          <h2>Вдохновение</h2>
+          <p>fasfsadf</p>
+          <p>asdfsadasd</p>
         </div>
 
-        <div class="inactive" id="linkPage">
-          <p>Ссылки</p>
+        <div id="linksPage">
+          <h2>Ссылки</h2>
           <div class="linkContainer">
             <div class="tg">
-              <img class="imgLink" src="images/qr1.png">
+              <img class="icon imgLink" src="images/qr1.png">
               <p>Telegram</p>
             </div>
             <div class="yt">
-              <img class="imgLink" src="images/qr1.png">
+              <img class="icon imgLink" src="images/qr1.png">
               <p>YouTube</p>
             </div>
             <div class="sc">
-              <img class="imgLink" src="images/qr1.png">
+              <img class="icon imgLink" src="images/qr1.png">
               <p>SoundCloud</p>
             </div>
           </div>
