the audio playback system has been improved

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                   <input type="button" class="actionBtn" id="2">
                 </div>
               </div>
-              <div class="equalizer">equalizer</div>
             </div>
             <div class="telegram">
               <img class="icon" src="images/tg.jpeg">
@@ -91,8 +90,10 @@
 
         <div id="inspiration">
           <h2>Вдохновение</h2>
-          <p>fasfsadf</p>
-          <p>asdfsadasd</p>
+          <div class="paragraph">
+            <p>fasfsadf</p>
+            <p>asdfsadasd</p>
+          </div>
         </div>
 
         <div id="linksPage">
