--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <p class="text"> Информация об авторе</p>
             </div>
             <div class="music">
-              <p>Популярные треки</p>
+              <h2>Популярные треки</h2>
               <div class="albums">
                 <div class="track track1">
                   <img class="img track1" src="images/track1.jpg">
@@ -52,7 +52,7 @@
         </div>
 
         <div id="works">
-          <div class="worksContainer">
+          <h2>Все треки</h2>
             <div class="work w1">
               <input type="button" class="actionBtn" id="0">
               <p>Driving</p>
@@ -81,7 +81,6 @@
               <input type="button" class="actionBtn" id="6">
               <p>Worldtrip</p>
             </div>
-          </div>
         </div>
 
         <div id="inspiration">
