--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
           <div class="link-container">
             <div class="tg">
               <img class="qr" src="images/qr1.png">
-              <p>Telegram</p>
+              <a href="https://t.me/V_dancewav">Telegram</a>
             </div>
             <div class="yt">
               <img class="qr" src="images/qr2.png">
-              <p>YouTube</p>
+              <a href="https://www.youtube.com/@Ven_dance">YouTube</a>
             </div>
             <div class="sc">
               <img class="qr" src="images/qr3.png">
-              <p>SoundCloud</p>
+              <a href="https://on.soundcloud.com/hpevW">SoundCloud</a>
             </div>
           </div>
         </div>
