--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <p class="head">Vendance</p>
           </div>
           <div class="links">
-            <a href="#main-info" class="link">Главное</a>
-            <a href="#works" class="link">Работы</a>
-            <a href="#inspiration" class="link">Вдохновление</a>
-            <a href="#links-page" class="link">Ссылки</a>
+            <a href="#main-info" class="link btn">Главное</a>
+            <a href="#works" class="link btn">Работы</a>
+            <a href="#inspiration" class="link btn">Вдохновление</a>
+            <a href="#links-page" class="link btn">Ссылки</a>
           </div>
         </header>
 
@@ -31,23 +31,26 @@
               <h2>Популярные треки</h2>
               <div class="albums">
                 <div class="track track1">
+                  <p>Driving</p>
                   <img class="img track1" src="images/track1.jpg">
-                  <input type="button" class="action-btn" id="0">
+                  <input type="button" class="action-btn example" id="0">
                 </div>
                 <div class="track track2">
+                  <p>The Stream Hardphonk</p>
                   <img class="img track2" src="images/track2.jpg">
-                  <input type="button" class="action-btn" id="1">
+                  <input type="button" class="action-btn example" id="1">
                 </div>
                 <div class="track track3">
+                  <p>Liquid</p>
                   <img class="img track3" src="images/track1.jpg">
-                  <input type="button" class="action-btn" id="2">
+                  <input type="button" class="action-btn example" id="2">
                 </div>
               </div>
             </div>
             <div class="telegram">
               <img class="icon" src="images/tg.jpeg">
               <div class="tg-link">
-                <a class="link-block text" href="https://t.me/V_dancewav">Телеграм канал</a>
+                <a class="link-block text btn" href="https://t.me/V_dancewav">Телеграм канал</a>
                 <img class="qr" src="images/qr1.png">
               </div>
             </div>
@@ -98,7 +101,17 @@
               <div><a href=""><img title="Phonk, DVRST" class="slider" src="images/6.jpg" alt=""></a></div>
             </div>
           </div>
-          <input type="button" class="insp-btn text" value="Остальные авторы">
+          <input type="button" class="insp-btn text btn" value="Остальные авторы">
+          <div class="list inactive" id="list">
+            <h2>Электорника</h2>
+            <p>deadmau5</p>
+            <p>Lvusm</p>
+            <p>Future Joust</p>
+            <p>5admin</p>
+            <h2>Phonk</h2>
+            <p>CYPARISS</p>
+            <p>Geoxor</p>
+          </div>
         </div>
 
         <div id="links-page" class="block">
@@ -106,15 +119,15 @@
           <div class="link-container">
             <div class="tg">
               <img class="qr" src="images/qr1.png">
-              <a href="https://t.me/V_dancewav">Telegram</a>
+              <a href="https://t.me/V_dancewav" class="btn">Telegram</a>
             </div>
             <div class="yt">
               <img class="qr" src="images/qr2.png">
-              <a href="https://www.youtube.com/@Ven_dance">YouTube</a>
+              <a href="https://www.youtube.com/@Ven_dance" class="btn">YouTube</a>
             </div>
             <div class="sc">
               <img class="qr" src="images/qr3.png">
-              <a href="https://on.soundcloud.com/hpevW">SoundCloud</a>
+              <a href="https://on.soundcloud.com/hpevW" class="btn">SoundCloud</a>
             </div>
           </div>
         </div>
