--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Vendance</title>
+    <title>Vendance</title> 
     <link rel="stylesheet" href="//cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -14,10 +14,10 @@
             <p class="head">Vendance</p>
           </div>
           <div class="links">
-            <a href="#main-info" class="link btn">Главное</a>
-            <a href="#works" class="link btn">Работы</a>
-            <a href="#inspiration" class="link btn">Вдохновление</a>
-            <a href="#links-page" class="link btn">Ссылки</a>
+            <a href="#main-info" class="link interections">Главное</a>
+            <a href="#works" class="link interections">Работы</a>
+            <a href="#inspiration" class="link interections">Вдохновление</a>
+            <a href="#links-page" class="link interections">Ссылки</a>
           </div>
         </header>
 
@@ -50,8 +50,8 @@
             <div class="telegram">
               <img class="icon" src="images/tg.jpeg">
               <div class="tg-link">
-                <a class="link-block text btn" href="https://t.me/V_dancewav">Телеграм канал</a>
-                <img class="qr" src="images/qr1.png">
+                <a class="link-block text btn interections" href="//t.me/V_dancewav">Телеграм канал</a>
+                <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png">
               </div>
             </div>
           </main>
@@ -101,16 +101,16 @@
               <div><a href=""><img title="Phonk, DVRST" class="slider" src="images/6.jpg" alt=""></a></div>
             </div>
           </div>
-          <input type="button" class="insp-btn text btn" value="Остальные авторы">
+          <input type="button" class="insp-btn text btn interections" value="Остальные авторы">
           <div class="list inactive" id="list">
-            <h2>Электорника</h2>
-            <p>deadmau5</p>
-            <p>Lvusm</p>
-            <p>Future Joust</p>
-            <p>5admin</p>
-            <h2>Phonk</h2>
-            <p>CYPARISS</p>
-            <p>Geoxor</p>
+            <h2 class="anime">Электорника</h2>
+            <p class="anime">deadmau5</p>
+            <p class="anime">Lvusm</p>
+            <p class="anime">Future Joust</p>
+            <p class="anime">5admin</p>
+            <h2 class="anime">Phonk</h2>
+            <p class="anime">CYPARISS</p>
+            <p class="anime">Geoxor</p>
           </div>
         </div>
 
@@ -118,16 +118,16 @@
           <h2>Ссылки</h2>
           <div class="link-container">
             <div class="tg">
-              <img class="qr" src="images/qr1.png">
-              <a href="https://t.me/V_dancewav" class="btn">Telegram</a>
+              <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png">
+              <a href="//t.me/V_dancewav" class="btn interections">Telegram</a>
             </div>
             <div class="yt">
-              <img class="qr" src="images/qr2.png">
-              <a href="https://www.youtube.com/@Ven_dance" class="btn">YouTube</a>
+              <img class="qr interections" id="//www.youtube.com/@Ven_dance" src="images/qr2.png">
+              <a href="//www.youtube.com/@Ven_dance" class="btn interections">YouTube</a>
             </div>
             <div class="sc">
-              <img class="qr" src="images/qr3.png">
-              <a href="https://on.soundcloud.com/hpevW" class="btn">SoundCloud</a>
+              <img class="qr interections" id="//on.soundcloud.com/hpevW" src="images/qr3.png">
+              <a href="//on.soundcloud.com/hpevW" class="btn interections">SoundCloud</a>
             </div>
           </div>
         </div>
