add "alt" for pictures

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="site">
         <header>
           <div class="name">
-            <img class="head avatar-header" src="images/icon1.jpeg">
+            <img class="head avatar-header" src="images/icon1.jpeg" alt="icon">
             <p class="head">Vendance</p>
           </div>
           <div class="links">
@@ -24,7 +24,7 @@
         <div id="main-info" class="block">
           <main>
             <div class="about">
-              <img class="icon avatar-main" src="images/icon2.jpeg">
+              <img class="icon avatar-main" src="images/icon2.jpeg" alt="icon">
               <p class="text"> Информация об авторе</p>
             </div>
             <div class="music">
@@ -32,26 +32,26 @@
               <div class="albums">
                 <div class="track track1">
                   <p>Driving</p>
-                  <img class="img track1" src="images/track1.jpg">
+                  <img class="img track1" src="images/track1.jpg" alt="track img">
                   <input type="button" class="action-btn example" id="0">
                 </div>
                 <div class="track track2">
                   <p>The Stream Hardphonk</p>
-                  <img class="img track2" src="images/track2.jpg">
+                  <img class="img track2" src="images/track2.jpg" alt="track img">
                   <input type="button" class="action-btn example" id="1">
                 </div>
                 <div class="track track3">
                   <p>Liquid</p>
-                  <img class="img track3" src="images/track1.jpg">
+                  <img class="img track3" src="images/track1.jpg" alt="track img">
                   <input type="button" class="action-btn example" id="2">
                 </div>
               </div>
             </div>
             <div class="telegram">
-              <img class="icon" src="images/tg.jpeg">
+              <img class="icon" src="images/tg.jpeg" alt="telegram icon">
               <div class="tg-link">
                 <a class="link-block text btn interections" href="//t.me/V_dancewav">Телеграм канал</a>
-                <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png">
+                <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png" alt="qr telegram">
               </div>
             </div>
           </main>
@@ -92,7 +92,7 @@
         <div id="inspiration" class="block">
           <h2>Вдохновение</h2>
           <div class="paragraph">
-            <div class="images">
+            <div class="images" alt="images">
               <div><a href=""><img title="Поп музыка, Twenty one pilots" class="slider" src="images/1.jpg" alt=""></a></div>
               <div><a href=""><img title="Поп музыка, Michael Jackson" class="slider" src="images/2.jpg" alt=""></a></div>
               <div><a href=""><img title="Поп музыка, Stromae" class="slider" src="images/3.jpg" alt=""></a></div>
@@ -119,14 +119,14 @@
           <div class="link-container">
             <div class="tg">
               <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png">
-              <a href="//t.me/V_dancewav" class="btn interections">Telegram</a>
+              <a href="//t.me/V_dancewav" class="btn interections" alt="qr telegram">Telegram</a>
             </div>
             <div class="yt">
               <img class="qr interections" id="//www.youtube.com/@Ven_dance" src="images/qr2.png">
-              <a href="//www.youtube.com/@Ven_dance" class="btn interections">YouTube</a>
+              <a href="//www.youtube.com/@Ven_dance" class="btn interections" alt="qr youtube">YouTube</a>
             </div>
             <div class="sc">
-              <img class="qr interections" id="//on.soundcloud.com/hpevW" src="images/qr3.png">
+              <img class="qr interections" id="//on.soundcloud.com/hpevW" src="images/qr3.png" alt="qr soundcloud">
               <a href="//on.soundcloud.com/hpevW" class="btn interections">SoundCloud</a>
             </div>
           </div>
