--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
           <h2>Ссылки</h2>
           <div class="link-container">
             <div class="tg">
-              <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png">
-              <a href="//t.me/V_dancewav" class="btn interections" alt="qr telegram">Telegram</a>
+              <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png" alt="qr telegram">
+              <a href="//t.me/V_dancewav" class="btn interections">Telegram</a>
             </div>
             <div class="yt">
-              <img class="qr interections" id="//www.youtube.com/@Ven_dance" src="images/qr2.png">
-              <a href="//www.youtube.com/@Ven_dance" class="btn interections" alt="qr youtube">YouTube</a>
+              <img class="qr interections" id="//www.youtube.com/@Ven_dance" src="images/qr2.png" alt="qr youtube">
+              <a href="//www.youtube.com/@Ven_dance" class="btn interections">YouTube</a>
             </div>
             <div class="sc">
               <img class="qr interections" id="//on.soundcloud.com/hpevW" src="images/qr3.png" alt="qr soundcloud">
