--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           <main>
             <div class="about">
               <img class="icon avatar-main" src="images/icon2.jpeg" alt="icon">
-              <p class="text"> Информация об авторе</p>
+              <div class="text">
+                <p>Vendance - автор, композитор, пишущий музыку стилем прямиком из альтернативных 80-90-х.</p>
+                <p>Synthwace, Retrowave, Sovietwave - вот его основные жанры.</p>
+                <p>А электронный и аналоговый звук - основа его композиций</p>
+              </div>
             </div>
             <div class="music">
               <h2>Популярные треки</h2>
@@ -50,7 +54,7 @@
             <div class="telegram">
               <img class="icon" src="images/tg.jpeg" alt="telegram icon">
               <div class="tg-link">
-                <a class="link-block text btn interections" href="//t.me/V_dancewav">Телеграм канал</a>
+                <a class="link-block btn interections" href="//t.me/V_dancewav">Телеграм канал</a>
                 <img class="qr interections" id="//t.me/V_dancewav" src="images/qr1.png" alt="qr telegram">
               </div>
             </div>
@@ -103,14 +107,14 @@
           </div>
           <input type="button" class="insp-btn text btn interections" value="Остальные авторы">
           <div class="list inactive" id="list">
-            <h2 class="anime">Электорника</h2>
-            <p class="anime">deadmau5</p>
-            <p class="anime">Lvusm</p>
-            <p class="anime">Future Joust</p>
-            <p class="anime">5admin</p>
-            <h2 class="anime">Phonk</h2>
-            <p class="anime">CYPARISS</p>
-            <p class="anime">Geoxor</p>
+            <h2>Электорника</h2>
+            <p>deadmau5</p>
+            <p>Lvusm</p>
+            <p>Future Joust</p>
+            <p>5admin</p>
+            <h2>Phonk</h2>
+            <p>CYPARISS</p>
+            <p>Geoxor</p>
           </div>
         </div>
 
@@ -139,6 +143,5 @@
   </body>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-  <script src="anime.js"></script>
   <script src="script.js"></script>
 </html>
